--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Belajar Git bersama Atha</title>
 
-</head>
-<body>
+    <!-- link css -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
     <h1>Halo</h1>
-</body>
+    <p>Ini paragraf baru</p>
+  </body>
 </html>
